--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -9,3 +9,20 @@ html, body {
 #app {
   height:100%;
 }
+
+.welcome-title {
+  width:100%;
+  text-align:center;
+  font-size:48px;
+  color:gray;
+  font-family: Mali;
+  font-weight:bold;
+  margin-top:25px;
+}
+
+.vue-logo {
+  position:relative;
+  left:50%;
+  transform:translateX(-50%);
+  margin-top:25px;
+}
